unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/ia_crm__Intacct_Contract__c.object-meta.xml
<CustomObject>
    <label>Intacct Contract</label>
    <nameField>
        <label>Intacct Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>