unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Bill_in_advance__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_in_advance__c</fullName>
    <label>Bill in advance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>