unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Bill_in_advance_term__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_in_advance_term__c</fullName>
    <label>Bill in advance term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>