unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Bill_To_Address2__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_To_Address2__c</fullName>
    <label>Bill To Address 2</label>
    <type>TextArea</type>
</CustomField>