unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Bill_to_Address_2__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to_Address_2__c</fullName>
    <label>Bill to Address 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>