unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>