unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Billing_Price_List__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Price_List__c</fullName>
    <label>Billing Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>