unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Billing_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Pricelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Pricelist</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Intacct Contracts</relationshipLabel>
    <relationshipName>Intacct_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>