unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_ID__c</fullName>
    <label>Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>