unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Customer__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intacct Contracts</relationshipLabel>
    <relationshipName>Intacct_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>