unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Days_Until_Renewal__c</fullName>
    <formula>IF( AND(ia_crm__Renew__c, ia_crm__Renewal_Template2__r.ia_crm__Create_Opportunity_from_Salesforce__c ) , 
If( ISPICKVAL( ia_crm__Renewal_Template2__r.ia_crm__When__c , &#39;Before&#39;), 
ia_crm__End_Date__c-Today() - if(ISBLANK(ia_crm__Renewal_Template2__r.ia_crm__Number_of_days__c),0,ia_crm__Renewal_Template2__r.ia_crm__Number_of_days__c) , 
ia_crm__End_Date__c-Today() + if(ISBLANK(ia_crm__Renewal_Template2__r.ia_crm__Number_of_days__c),0,ia_crm__Renewal_Template2__r.ia_crm__Number_of_days__c) ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>