unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Exchange_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Exchange_Rate_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate Type</label>
    <referenceTo>ia_crm__Exchange_Rate_Type__c</referenceTo>
    <relationshipLabel>Intacct Contracts</relationshipLabel>
    <relationshipName>Intacct_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>