unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Intacct_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_Id__c</fullName>
    <formula>IF(ISNULL(ia_crm__Created_at_Entity__c), &#39;&#39;,
IF( ISPICKVAL( ia_crm__Created_at_Entity__r.ia_crm__Entity_Type__c , &#39;Entity&#39;), ia_crm__Created_at_Entity__r.ia_crm__Intacct_Entity_ID__c , ia_crm__Created_at_Entity__r.ia_crm__Top_Entity__r.ia_crm__Intacct_Entity_ID__c))</formula>
    <label>Intacct Entity Id</label>
    <type>Text</type>
</CustomField>