unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Is_Renewal_Processed__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Renewal_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewal Processed</label>
    <type>Checkbox</type>
</CustomField>