unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Location_Key__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Location_Key__c</fullName>
    <label>Location Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>