unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Original_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>ia_crm__Intacct_Contract__c</referenceTo>
    <relationshipLabel>Related Intacct Contracts</relationshipLabel>
    <relationshipName>Intacct_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>