unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Parent_key__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Parent_key__c</fullName>
    <label>Parent key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>