unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Record_URL__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Record_URL__c</fullName>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>