unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Renewal_contract_term_type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_contract_term_type__c</fullName>
    <label>Renewal contract term type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ia_crm__Term_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Termed</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>