unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Renewal_Errors__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Errors__c</fullName>
    <label>Renewal Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>