unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Renewal_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Term_Length__c</fullName>
    <label>Renewal Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>