unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Renewal_Term_Period__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Term_Period__c</fullName>
    <label>Renewal Term Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>