unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__SF_Renewal_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SF_Renewal_Contract_Id__c</fullName>
    <label>SF Renewal Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>