unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Ship_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intacct Contracts (Ship to)</relationshipLabel>
    <relationshipName>Intacct_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>