unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Ship_to_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to_Company_Name__c</fullName>
    <label>Ship to Company Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>