unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Ship_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to_Zip_Code__c</fullName>
    <label>Ship to Zip Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>