unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Term_type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Term_type__c</fullName>
    <label>Term type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termed</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>