unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Transaction_currency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Transaction_currency__c</fullName>
    <label>Transaction currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>