unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>