unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/fields/ia_crm__When_Created__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__When_Created__c</fullName>
    <label>When Created</label>
    <type>DateTime</type>
</CustomField>