unpackaged/main/default/objects/ia_crm__Intacct_Contract__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Contract_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ia_crm__Days_Until_Renewal__c</columns>
    <columns>ia_crm__State__c</columns>
    <columns>ia_crm__Is_Renewal_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>